@@ -20,13 +20,10 @@ import org.elasticsearch.cluster.ClusterStateUpdateTask;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.snapshots.SnapshotException;
 import org.elasticsearch.snapshots.SnapshotInfo;
 import org.elasticsearch.xcontent.ToXContent;
-import org.elasticsearch.xcontent.XContentBuilder;
-import org.elasticsearch.xcontent.json.JsonXContent;
 import org.elasticsearch.xpack.core.ClientHelper;
 import org.elasticsearch.xpack.core.scheduler.SchedulerEngine;
 import org.elasticsearch.xpack.core.slm.SnapshotInvocationRecord;
@@ -39,12 +36,9 @@ import org.elasticsearch.xpack.slm.history.SnapshotHistoryStore;
 
 import java.io.IOException;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
-
-import static org.elasticsearch.ElasticsearchException.REST_EXCEPTION_SKIP_STACK_TRACE;
 
 public class SnapshotLifecycleTask implements SchedulerEngine.Listener {
 
@@ -198,8 +192,8 @@ public class SnapshotLifecycleTask implements SchedulerEngine.Listener {
      * A cluster state update task to write the result of a snapshot job to the cluster metadata for the associated policy.
      */
     private static class WriteJobStatus extends ClusterStateUpdateTask {
-        private static final ToXContent.Params STACKTRACE_PARAMS = new ToXContent.MapParams(
-            Collections.singletonMap(REST_EXCEPTION_SKIP_STACK_TRACE, "false")
+        private static final ToXContent.Params EXCEPTION_SERIALIZATION_PARAMS = new ToXContent.MapParams(
+            Map.of(ElasticsearchException.REST_EXCEPTION_SKIP_CAUSE, "true")
         );
 
         private final String policyName;
@@ -230,16 +224,11 @@ public class SnapshotLifecycleTask implements SchedulerEngine.Listener {
             return new WriteJobStatus(policyId, snapshotName, timestamp, timestamp, Optional.of(exception));
         }
 
-        private String exceptionToString() throws IOException {
-            if (exception.isPresent()) {
-                try (XContentBuilder causeXContentBuilder = JsonXContent.contentBuilder()) {
-                    causeXContentBuilder.startObject();
-                    ElasticsearchException.generateThrowableXContent(causeXContentBuilder, STACKTRACE_PARAMS, exception.get());
-                    causeXContentBuilder.endObject();
-                    return BytesReference.bytes(causeXContentBuilder).utf8ToString();
-                }
-            }
-            return null;
+        private String exceptionToString() {
+            return exception.map(e -> Strings.toString((builder, params) -> {
+                ElasticsearchException.generateThrowableXContent(builder, EXCEPTION_SERIALIZATION_PARAMS, e);
+                return builder;
+            }, EXCEPTION_SERIALIZATION_PARAMS)).orElse(null);
         }
 
         @Override
